src/objects/APTS_AverageListPriceCostPrice__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ALPCP_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>APTS_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ALPCP_GIP__c</fullName>
        <label>GIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_ALPCP_IngCost__c</fullName>
        <label>Ingredient Costprice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_ALPCP_Routesales__c</fullName>
        <label>Routesales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_ALPCP_SalesOrg__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ALPCP_Subcategory__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>APTS_ALPCP_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>APTS_Subcategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ALPCP_Subsubcat__c</fullName>
        <label>Sub-Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>APTS_ALPCP_Subcategory__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>APTS_Subsubcategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ALPCP_UnitOfMeasure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_DRKS</fullName>
                    <label>Drinks</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ALPCP_VAP__c</fullName>
        <label>VAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Average List Price &amp; Cost Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_ALPCP_Category__c</columns>
        <columns>APTS_ALPCP_Subcategory__c</columns>
        <columns>APTS_ALPCP_Subsubcat__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>APTS_ALPCP_SalesOrg__c</columns>
        <columns>APTS_ALPCP_UnitOfMeasure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ALC-{00000000}</displayFormat>
        <label>Average List Price &amp; Cost Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Average List Prices &amp; Cost Prices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>